--- a/Homepage.html
+++ b/Homepage.html
@@ -100,10 +100,10 @@
                     <div class="slider">
                         <div class="slide-track">
                             <div class="slide">
-                                <img src="Images/imgHomepage/CatScrollImages/1.jpg" alt="">
+                                <img src="Images/imgHomepage/CatScrollImages/1.JPG" alt="">
                             </div>
                             <div class="slide">
-                                <img src="Images/imgHomepage/CatScrollImages/2.jpg" alt="">
+                                <img src="Images/imgHomepage/CatScrollImages/2.JPG" alt="">
                             </div>
                             <div class="slide">
                                 <img src="Images/imgHomepage/CatScrollImages/3.jpg" alt="">
