--- a/Homepage.html
+++ b/Homepage.html
@@ -103,7 +103,7 @@
                                 <img src="Images/imgHomepage/CatScrollImages/1.JPG" alt="">
                             </div>
                             <div class="slide">
-                                <img src="Images/imgHomepage/CatScrollImages/2.JPG" alt="">
+                                <img src="Images/imgHomepage/CatScrollImages/2.JPG" alt="CAT PIC 2">
                             </div>
                             <div class="slide">
                                 <img src="Images/imgHomepage/CatScrollImages/3.jpg" alt="">
